import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.134'
    id 'idea'
    id 'net.darkhax.curseforgegradle' version '1.2.30'
    id 'com.modrinth.minotaur' version '2.+'
}

var env = new Properties()
if (file('.env').exists()) {
    file('.env').withInputStream { env.load(it) }
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()

    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    maven {
        name 'Jitpack'
        url 'https://jitpack.io'
    }

    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
    maven { url = "https://maven.createmod.net" }
    maven { url "https://api.modrinth.com/maven" }
    maven { url = 'https://maven.parchmentmc.org' }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientAuth {
            client()
            devLogin = true
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    unitTest {
        enable()
        testedMod = mods."${mod_id}"
    }
}

// Ensure the IDE uses the same output directories as Gradle
// This can help with FML complaining about directories not being valid mod files
idea {
    module {
        inheritOutputDirs = true
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation("maven.modrinth:ctmlib:${ctm_version}")
    implementation("maven.modrinth:jade:${jade_version}")

    // compile against the JEI API but do not include it at runtime
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    // at runtime, use the full JEI jar for NeoForge
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.register('publishCurseForge', TaskPublishCurseForge) {
    apiToken = env.getProperty("CURSEFORGE")
    def projectId = '225236'
    def mainFile = upload(projectId, jar)

    mainFile.changelog = file('CHANGELOG.md')
    mainFile.addModLoader("neoforge")
    mainFile.releaseType = release_type
    mainFile.addRequirement("ctm-lib")
    mainFile.addGameVersion("Client", "Server")
}

modrinth {
    token = env.getProperty("MODRINTH")
    projectId = "chisel-3"
    versionName = "${mod_name}-${mod_version}"
    versionNumber = mod_version
    versionType = release_type
    uploadFile = jar
    gameVersions = ["26.1.2"]
    loaders = ["neoforge"]
    dependencies {
        required.project "ctmlib"
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.register('releaseCurseForge') {
    group = 'upload'
    description = 'Builds and uploads the jar to CurseForge'
    dependsOn 'publishCurseForge'
}

tasks.register('releaseModrinth') {
    group = 'upload'
    description = 'Builds and uploads the jar to Modrinth'
    dependsOn 'modrinth'
}

tasks.register('release') {
    group = 'upload'
    description = 'Builds and uploads the jar to both CurseForge and Modrinth'
    dependsOn 'jar', 'releaseCurseForge', 'releaseModrinth'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xmaxerrs" << "10000"
}

idea {
    module {
        inheritOutputDirs = true
        downloadSources = true
        downloadJavadoc = true
    }
}
